tests/grammar/snapshots/r#mod__grammar__alpha034__modifiers-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"silent\").unwrap()"
---
Statement(
    [
        CommandModifier(
            Silent,
        ),
    ],
)
