tests/grammar/snapshots/r#mod__grammar__alpha034__modifiers-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"silent unsafe {}\").unwrap()"
---
[
    (
        Statement(
            (
                CommandModifier(
                    (
                        Silent,
                        0..6,
                    ),
                ),
                0..6,
            ),
        ),
        0..6,
    ),
    (
        Statement(
            (
                CommandModifier(
                    (
                        Unsafe,
                        7..13,
                    ),
                ),
                7..13,
            ),
        ),
        7..13,
    ),
    (
        Statement(
            (
                Block(
                    (
                        Block(
                            [],
                        ),
                        14..16,
                    ),
                ),
                14..16,
            ),
        ),
        14..16,
    ),
]
