tests/grammar/snapshots/r#mod__grammar__alpha034__modifiers-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"unsafe silent {}\").unwrap()"
---
Statement(
    [
        CommandModifier(
            Unsafe,
        ),
        CommandModifier(
            Silent,
        ),
        Block(
            Block(
                [],
            ),
        ),
    ],
)
