tests/grammar/snapshots/r#mod__grammar__alpha034__modifiers-5.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"unsafe silent $command$\").unwrap()"
---
Statement(
    [
        CommandModifier(
            Unsafe,
        ),
        CommandModifier(
            Silent,
        ),
        Expression(
            Command(
                [
                    Text(
                        "command",
                    ),
                ],
                None,
            ),
        ),
    ],
)
