tests/grammar/snapshots/r#mod__grammar__alpha034__modifiers.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"unsafe\").unwrap()"
---
[
    (
        Statement(
            (
                CommandModifier(
                    (
                        Unsafe,
                        0..6,
                    ),
                ),
                0..6,
            ),
        ),
        0..6,
    ),
]
